@@ -28,9 +28,6 @@ import edu.umd.cs.piccolo.util.PBounds;
  */
 public class BeersLawModel implements Resettable {
 
-    private static final DoubleRange CUVETTE_WIDTH_RANGE = new DoubleRange( 0.5, 2.0, 1.0 ); // cm
-    private static final double CUVETTE_HEIGHT = 3; // cm
-
     private final ArrayList<BeersLawSolution> solutions; // the supported set of solutions
     public final Property<BeersLawSolution> solution; // the selected solution
     public final Light light;
@@ -60,14 +57,14 @@ public class BeersLawModel implements Resettable {
 
         this.light = new Light( new ImmutableVector2D( 1.5, 2.2 ), false, LightRepresentation.BEAM, 0.45, solution );
 
-        this.cuvette = new Cuvette( new ImmutableVector2D( light.location.getX() + 1.5, 1.25 ), CUVETTE_WIDTH_RANGE.getDefault(), CUVETTE_HEIGHT, CUVETTE_WIDTH_RANGE );
+        this.cuvette = new Cuvette( new ImmutableVector2D( light.location.getX() + 1.5, 1.25 ), 1.0, 2.75, new DoubleRange( 0.5, 2.0 ) );
 
         //TODO compute drag bounds to match the stage size
         this.detector = new ATDetector( new ImmutableVector2D( 6, 3.75 ), new PBounds( 0, 0, 7.9, 5.25 ),
                                         new ImmutableVector2D( 6, light.location.getY() ), new PBounds( 0, 0, 7.9, 5.25 ) );
 
         //TODO compute drag bounds to match the stage size
-        this.ruler = new Ruler( 2, new ImmutableVector2D( 3, 4.9 ), new PBounds( 0, 0, 8, 5.5 ) );
+        this.ruler = new Ruler( 2, 0.3, new ImmutableVector2D( 3, 4.9 ), new PBounds( 0, 0, 8, 5.5 ) );
     }
 
     public void reset() {
@@ -79,9 +76,5 @@ public class BeersLawModel implements Resettable {
 
     public ArrayList<BeersLawSolution> getSolutions() {
         return new ArrayList<BeersLawSolution>( solutions );
-    }
-
-    public DoubleRange getCuvetteWidthRange() {
-        return CUVETTE_WIDTH_RANGE;
     }
 }
