@@ -1,3 +1,5 @@
+2/22/12 reduce cuvette height by 0.25 cm so that it's easier to drag detector probe around bottom of cuvette
+2/22/12 add height to ruler model
 2/22/12 design decision: don't change appear of arrow at min/max range of cuvette width
 2/22/12 remove molar mass from model, it appears in design doc but isn't used for anything
 2/22/12 use toggle button on light
